--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
-    <!-- AOS Animation Library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- GSAP and ScrollTrigger for animations -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
 
     <!-- JS -->
     <script src="script.js" defer></script>
@@ -85,27 +84,37 @@
         <source src="https://res.cloudinary.com/diolcqc1f/video/upload/v1747039515/MET-GALA-2025_ikmedm.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
+
       <div class="intro">
-        <h1>THE MET 2025</h1>
+        <h1 class="title-text">THE MET 2025</h1>
         <p>Superfine: Tailoring Black Style</p>
+      </div>
+
+      <div class="scroll-indicator">
+        <span>SCROLL</span>
+        <div class="scroll-arrow"></div>
       </div>
 
       <nav id="mainNav">
         <div class="nav-container">
-         <div class="empty"></div>
+          <div class="empty"></div>
           <div class="nav-links">
-            <a href="#top-artists">My Top Artists</a>
-            ✦
-            <a href="#designers">Designers</a>
-            ✦
-            <a href="#team">Team</a>
-            ✦
-            <a href="#memes">Memes</a>
+            <a href="#top-artists" class="nav-link">My Top Artists</a>
+            <span>✦</span>
+            <a href="#designers" class="nav-link">Designers</a>
+            <span>✦</span>
+            <a href="#team" class="nav-link">Team</a>
+            <span>✦</span>
+            <a href="#memes" class="nav-link">Memes</a>
           </div>
         </div>
       </nav>
     </section>
 
+    <!-- Top Artists Section -->
+    <section id="top-artists" class="section">
+      <h2>My Top Artists</h2>
+    </section>
 
   </body>
 </html
