--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="nav-container">
           <div class="empty"></div>
           <div class="nav-links">
-            <a href="#top-artists" class="nav-link">My Top Artists</a>
+            <a href="#top-artists" class="nav-link">Celebrities</a>
             <span>✦</span>
             <a href="#designers" class="nav-link">Designers</a>
             <span>✦</span>
@@ -114,6 +114,18 @@
     <!-- Top Artists Section -->
     <section id="top-artists" class="section">
       <h2>My Top Artists</h2>
+    </section>
+
+    <section id="designers" class="section">
+      <h2>Designers</h2>
+    </section>
+
+    <section id="teams" class="section">
+      <h2>Teams</h2>
+    </section>
+
+    <section id="memes" class="section">
+      <h2>Memes</h2>
     </section>
 
   </body>
