--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <span>✦</span>
             <a href="#designers" class="nav-link">Designers</a>
             <span>✦</span>
-            <a href="#team" class="nav-link">Team</a>
+              <a href="#team" class="nav-link">Team</a>
             <span>✦</span>
             <a href="#memes" class="nav-link">Memes</a>
           </div>
@@ -120,7 +120,7 @@
       <h2>Designers</h2>
     </section>
 
-    <section id="teams" class="section">
+    <section id="team" class="section">
       <h2>Teams</h2>
     </section>
 
