Index/card stacking is working aaa

--- a/index.html
+++ b/index.html
@@ -111,22 +111,19 @@
       </nav>
     </section>
 
-    <!-- Top Artists Section -->
-    <section id="top-artists" class="section">
-      <h2>My Top Artists</h2>
-    </section>
 
-    <section id="designers" class="section">
-      <h2>Designers</h2>
-    </section>
-
-    <section id="team" class="section">
-      <h2>Teams</h2>
-    </section>
-
-    <section id="memes" class="section">
-      <h2>Memes</h2>
-    </section>
-
+      <div class="section">
+        <h2>My Top Artists</h2>
+      </div>
+      <div class="section">
+        <h2>Designers</h2>
+      </div>
+      <div class="section">
+        <h2>Teams</h2>
+      </div>
+      <div class="section">
+        <h2>Memes</h2>
+      </div>
+   
   </body>
 </html
