--- a/index.html
+++ b/index.html
@@ -113,7 +113,26 @@
 
 
       <div class="section">
-        <h2>My Top Artists</h2>
+        <!-- Top 10 Artists container -->
+        <div class="top-looks" id="looks">
+          <!-- Look #10 -->
+          <div class="look" id="look10">
+            <div class="look-content">
+                <div class="look-number">10</div>
+                <div class="look-info">
+                    <h2>Zendaya</h2>
+                    <h3>Designer: Louis Vuitton</h3>
+                </div>
+                <div class="look-image">
+                    <img src="https://assets.vogue.com/photos/68193b5d5803a41aef06217c/master/w_800%2Cc_limit/2213603801" alt="Zendaya Met Gala 2025 Look">
+                </div>
+            </div>
+        </div>
+
+        
+
+        <!-- Look #9 -->
+        </div>
       </div>
       <div class="section">
         <h2>Designers</h2>
