--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="look-number">10</div>
                 <div class="look-info">
                     <h2>Zendaya</h2>
-                    <h3>Designer: Louis Vuitton</h3>
+                    <h3>in Louis Vuitton</h3>
                 </div>
                 <div class="look-image">
                     <img src="https://assets.vogue.com/photos/68193b5d5803a41aef06217c/master/w_800%2Cc_limit/2213603801" alt="Zendaya Met Gala 2025 Look">
@@ -131,22 +131,27 @@
           <!-- Look #9 -->
           <div class="look" id="look9">
             <div class="look-content">
-                <div class="look-number">10</div>
+                <div class="look-number">9</div>
                 <div class="look-info">
-                    <h2>Jennie</h2>
-                    <h3>Designer: Louis Vuitton</h3>
+                    <h2>Sabrina Carpenter</h2>
+                    <h3>in Louis Vuitton</h3>
                 </div>
                 <div class="look-image">
-                    <img src="https://assets.vogue.com/photos/68193b5d5803a41aef06217c/master/w_800%2Cc_limit/2213603801" alt="Zendaya Met Gala 2025 Look">
+                    <img src="https://assets.vogue.com/photos/6819455571a1849942c6eafc/master/w_800%2Cc_limit/2213608157" alt="Sabrina Carpenter Met Gala 2025 Look">
                 </div>
             </div>
           </div>
-          <!-- Look #9 -->
+          <!-- Look #8 -->
+
 
 
 
         </div>
+
+
       </div>
+
+      
       <div class="section">
         <h2>Designers</h2>
       </div>
