Index/changed animation -still not working properly with the top artists section

--- a/index.html
+++ b/index.html
@@ -111,56 +111,57 @@
       </nav>
     </section>
 
-
-      <div class="section">
-        <!-- Top 10 Artists container -->
-        <div class="top-looks" id="looks">
-          <!-- Look #10 -->
-          <div class="look" id="look10">
-            <div class="look-content">
-                <div class="look-number">10</div>
-                <div class="look-info">
-                    <h2>Zendaya</h2>
-                    <h3>in Louis Vuitton</h3>
-                </div>
-                <div class="look-image">
-                    <img src="https://assets.vogue.com/photos/68193b5d5803a41aef06217c/master/w_800%2Cc_limit/2213603801" alt="Zendaya Met Gala 2025 Look">
-                </div>
+     <!-- Top 10 Artists container -->
+     <div class="top-looks" id="looks">
+      <!-- Look #10 -->
+      <div class="look" id="look10">
+        <div class="look-content">
+            <div class="look-number">10</div>
+            <div class="look-info">
+                <h2>Zendaya</h2>
+                <h3>in Louis Vuitton</h3>
             </div>
-          </div>
-          <!-- Look #9 -->
-          <div class="look" id="look9">
-            <div class="look-content">
-                <div class="look-number">9</div>
-                <div class="look-info">
-                    <h2>Sabrina Carpenter</h2>
-                    <h3>in Louis Vuitton</h3>
-                </div>
-                <div class="look-image">
-                    <img src="https://assets.vogue.com/photos/6819455571a1849942c6eafc/master/w_800%2Cc_limit/2213608157" alt="Sabrina Carpenter Met Gala 2025 Look">
-                </div>
+            <div class="look-image">
+                <img src="https://assets.vogue.com/photos/68193b5d5803a41aef06217c/master/w_800%2Cc_limit/2213603801" alt="Zendaya Met Gala 2025 Look">
             </div>
-          </div>
-          <!-- Look #8 -->
-
-
-
-
         </div>
+      </div>
+      <!-- Look #9 -->
+      <div class="look" id="look9">
+        <div class="look-content">
+            <div class="look-number">9</div>
+            <div class="look-info">
+                <h2>Sabrina Carpenter</h2>
+                <h3>in Louis Vuitton</h3>
+            </div>
+            <div class="look-image">
+                <img src="https://assets.vogue.com/photos/6819455571a1849942c6eafc/master/w_800%2Cc_limit/2213608157" alt="Sabrina Carpenter Met Gala 2025 Look">
+            </div>
+        </div>
+      </div>
+      <!-- Look #8 -->
+      <div class="look" id="look8">
+        <div class="look-content">
+            <div class="look-number">8</div>
+            <div class="look-info">
+                <h2>Lewis Hamilton</h2>
+                <h3>in Wales Bonner</h3>
+            </div>
+            <div class="look-image">
+                <img src="https://assets.vogue.com/photos/68192e7f1e8f6e37a45847a8/master/w_800%2Cc_limit/2213598356" alt="Lewis Hamilton Met Gala 2025 Look">
+            </div>
+        </div>
+    </div>
 
-
-      </div>
-
-      
-      <div class="section">
-        <h2>Designers</h2>
-      </div>
-      <div class="section">
-        <h2>Teams</h2>
-      </div>
-      <div class="section">
-        <h2>Memes</h2>
-      </div>
+    <div class="section">
+      <h2>Designers</h2>
+    </div>
+    <div class="section">
+      <h2>Teams</h2>
+    </div>
+    <div class="section">
+      <h2>Memes</h2>
+    </div>
 
   </body>
 </html
